[package]
name = "lintin"
version = "0.1.0"
authors = ["neuromeow <neuromeowhouse@gmail.com>"]
rust-version = "1.70.0"
edition = "2021"
description = "Command-line tool for linting Ansible inventories"
readme = "README.md"
homepage = "https://github.com/neuromeow/lintin"
repository = "https://github.com/neuromeow/lintin"
license = "MIT"
keywords = ["ansible", "cli", "lint", "linter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
is-terminal = "0.4.9"
tempfile = "3.8.1"
